# kaczuchokalipsa

./: CMakeLists.txt
cmake/: Findjson-c.cmake
data/: .directory  kaczuchokalipsa.desktop
data/icons/: icon.rc  kaczuchokalipsa.icns
data/sprites/hashdash/: blink.ini
src/: CMakeLists.txt  common.c  common.h  main.c
src/gamestates/: CMakeLists.txt  dosowisko.c  empty.c  players.c  winner.c
src/libs/: Makefile  Makefile.in  common.c  common.h  ipac.lo  ipacseries.c  ipacseries.h  ipacseries.lo  ipacultimate.lo  libultimarc.la  pacLED.lo  pacdrive.lo  servostik.lo  ulboard.c  ulboard.lo  ultimarc.lo  ultistik.lo  usbbutton.c  usbbutton.h  usbbutton.lo
